--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "bootstrap": "^5.1.1"
   }
 }
